# trilha-python-dio

./: README.md  pyproject.toml
00 - Fundamentos/: desafio.py
01 - Estrutura de dados/: desafio.py
02 - Programação Orientada a Objetos/10 - desafio/: desafio_v1.py  desafio_v2.py
03 - Decoradores, Iteradores e Geradores/desafio/: desafio_v1.py
04 - Data e hora/desafio/desafio_v1/: main.py
04 - Data e hora/desafio/desafio_v1/banco/: __init__.py  clientes.py  contas.py
04 - Data e hora/desafio/desafio_v1/utils/: decorators.py
05 - Manipulação de arquivos/: 7_exercicio.py
05 - Manipulação de arquivos/projeto/: main.py
05 - Manipulação de arquivos/projeto/banco/: clientes.py  contas.py  historico.py  transacoes.py
05 - Manipulação de arquivos/projeto/utils/: __init__.py  decorators.py
06 - Gerenciamento de pacotes e boas práticas/: 01_boas_praticas.py
07 - Banco de dados/: 04_exercicio.py  meu_banco.db
