[tool.poetry]
name = "trilha-python-dio"
version = "0.1.0"
description = "Projeto dedicado aos códigos e desafios do Bootcamp Pyhton AI Backend Developer."
authors = ["murielly <murielly525@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
